cluster/manifests/alerthandler/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alerthandler
  labels:
    name: alerthandler
    pod-security.kubernetes.io/enforce: restricted
