cluster/manifests/alerthandler/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: alerthandler
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alerthandler
  mtls:
    mode: STRICT
