cluster/manifests/alerthandler/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-knative-serving
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alerthandler
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-gateways
          podSelector:
            matchLabels:
              app: cluster-local-gateway
      ports:
        - protocol: TCP
          port: 8012
    - from:
        - namespaceSelector:
            matchLabels:
              name: knative-serving
          podSelector:
            matchLabels:
              app.kubernetes.io/name: knative-serving
              app.kubernetes.io/component: activator
      ports:
        - protocol: TCP
          port: 8012
    - from:
        - namespaceSelector:
            matchLabels:
              name: knative-serving
          podSelector:
            matchLabels:
              app.kubernetes.io/name: knative-serving
              app.kubernetes.io/component: autoscaler
      ports:
        - protocol: TCP
          port: 9090
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-agent
spec:
  podSelector:
    matchLabels:
      telepresence.io/workloadEnabled: "true"
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9900
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: alerthandler
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: alerthandler
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: mimir
          podSelector:
            matchLabels:
              app.kubernetes.io/name: mimir
              app.kubernetes.io/component: alertmanager
      ports:
        - protocol: TCP
          port: 8012
    - from:
        - namespaceSelector:
            matchLabels:
              name: argocd
          podSelector:
            matchLabels:
              app.kubernetes.io/name: argocd-notifications-controller
      ports:
        - protocol: TCP
          port: 8012
